--- a/contrate-me-lucas-sanches.html
+++ b/contrate-me-lucas-sanches.html
@@ -96,7 +96,7 @@
             </div>
             <div class="infoContainer">
                 <hr>
-                <h3><a href="curriculo-lucas-sanches.html">Currículo</a></h3>
+                <h3><a href="index.html">Currículo</a></h3>
             </div>
         </main>
     </body>
